--- a/doc/requirements-doc.txt
+++ b/doc/requirements-doc.txt
@@ -1,6 +1,7 @@
 sphinx==3.1.1
 breathe==4.27.0
-sphinx_rtd_theme>=0.5.0
+#sphinx_rtd_theme>=0.5.0
+sphinx-book-theme
 sphinx-fortran==1.1.1
 nbsphinx>=0.8.2
 Jinja2==2.11
