--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -49,6 +49,10 @@ jobs:
         if: "contains( matrix.os, 'macos' )"
         run: brew install make || true
 
+      - name: Install cmake for Linux
+        if: contains( matrix.os, 'ubuntu' )
+        run: sudo apt-get install cmake
+
       - name: Install Intel compiler on Linux
         if: "contains( matrix.compiler, 'intel' ) && contains( matrix.os, 'ubuntu')"
         run: |
